fix: #42296, remove overflow and margin-bottom for good responsive

--- a/mobile/_tablette.scss
+++ b/mobile/_tablette.scss
@@ -7,11 +7,9 @@
             header {
                 max-width: 100%;
                 margin-right: 0;
-                overflow: hidden;
                 text-overflow: ellipsis;
                 white-space: nowrap;
                 box-sizing: border-box;
-                margin-bottom: -5px;
                 font-size: 12px;
             }
             section {
